--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <a href="Recipes/Lasagna.html">Lasagna</a>
+    <a href="Recipes/Pasta-with-butter.html">Pasta with Butter</a>
+    <a href="Recipes/Chicken-nuggets.html">Chicken Nuggets</a>
 </body>
 </html>
