--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="Recipes/Lasagna.html">Lasagna</a>
-    <a href="Recipes/Pasta-with-butter.html">Pasta with Butter</a>
-    <a href="Recipes/Chicken-nuggets.html">Chicken Nuggets</a>
+    <ul>
+   <li><a href="Recipes/Lasagna.html">Lasagna</a></li>
+    <li><a href="Recipes/Pasta-with-butter.html">Pasta with Butter</a></li>
+    <li><a href="Recipes/Chicken-nuggets.html">Chicken Nuggets</a></li>
 </body>
 </html>
