Added recipe html files into a folder called recipes to link from index directly to them, to fix the issue of 404 error code when trying to use link.

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <body>
     <h1>Odin Recipes</h1>
     <ul>
-   <li><a href="odin-recipes/lasagna.html">Lasagna</a></li>
-    <li><a href="odin-recipes/pasta-with-butter.html">Pasta with Butter</a></li>
-    <li><a href="odin-recipes/chicken-nuggets.html">Chicken Nuggets</a></li>
+   <li><a href="recipes/lasagna.html">Lasagna</a></li>
+    <li><a href="recipes/pasta-with-butter.html">Pasta with Butter</a></li>
+    <li><a href="recipes/chicken-nuggets.html">Chicken Nuggets</a></li>
 </body>
 </html>
