Added boilerplate to recipes html files to try and fix error code when clicking the link.

--- a/recipes/chicken-nuggets.html
+++ b/recipes/chicken-nuggets.html
@@ -1,3 +1,11 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
 <h1>Chicken Nuggets</h1>
 <img href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTOcjP0DfCSDh7kXZtBnThkF6UyI1I3m8K1Jw&usqp=CAU">
 <h3>Amazing chicken nuggets</h3>
@@ -16,3 +24,5 @@
     <li>Cook for 10 minutes or until desired crispiness</li>
     <li>Take nuggets out of the air fryer and enjoy!</li>
 </ol>
+</body>
+</html>
