--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -1,3 +1,11 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
 <h1>Lasagna</h1>
     <img href="https://www.google.com/imgres?imgurl=https%3A%2F%2Fstatic01.nyt.com%2Fimages%2F2023%2F08%2F31%2Fmultimedia%2FRS-Lasagna-hkjl%2FRS-Lasagna-hkjl-superJumbo.jpg&tbnid=wXizrRbJZBABDM&vet=12ahUKEwjV3_eSv4ODAxX7tIkEHSN5Aa0QMygAegQIARB0..i&imgrefurl=https%3A%2F%2Fcooking.nytimes.com%2Frecipes%2F9530-lasagna&docid=ImZQqw8i_duBNM&w=2048&h=1366&q=lasagna&ved=2ahUKEwjV3_eSv4ODAxX7tIkEHSN5Aa0QMygAegQIARB0">
     <h3>Delicious meat lasagna</h3>
@@ -23,3 +31,5 @@
     <li>Cover lasagna with tin foil</li>
     <li>Bake in oven for 45 minutes</li>
 </ol>
+</body>
+</html>
