Used wrong code for image link, and was not working. Switched from href to src. Hoping that was the issue.

--- a/recipes/pasta-with-butter.html
+++ b/recipes/pasta-with-butter.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <h1>Pasta with Butter</h1>
-<img href="https://www.google.com/imgres?imgurl=https%3A%2F%2Fwww.allrecipes.com%2Fthmb%2FIAP81Be7Nyly6t_Wkq1uYKzH-qo%3D%2F1500x0%2Ffilters%3Ano_upscale()%3Amax_bytes(150000)%3Astrip_icc()%2F244458-buttered-noodles-DDMFS-4x3-b9931662efa64b37883c0f73b296b124.jpg&tbnid=WW3MVLb5QGZipM&vet=12ahUKEwj66Pb3x4ODAxVXkIkEHRwpAUYQMygDegQIARB8..i&imgrefurl=https%3A%2F%2Fwww.allrecipes.com%2Frecipe%2F244458%2Fbuttered-noodles%2F&docid=pmOzBL_NHlG1-M&w=1500&h=1125&q=pasta%20with%20butter&ved=2ahUKEwj66Pb3x4ODAxVXkIkEHRwpAUYQMygDegQIARB8">
+<img src="https://www.google.com/imgres?imgurl=https%3A%2F%2Fwww.allrecipes.com%2Fthmb%2FIAP81Be7Nyly6t_Wkq1uYKzH-qo%3D%2F1500x0%2Ffilters%3Ano_upscale()%3Amax_bytes(150000)%3Astrip_icc()%2F244458-buttered-noodles-DDMFS-4x3-b9931662efa64b37883c0f73b296b124.jpg&tbnid=WW3MVLb5QGZipM&vet=12ahUKEwj66Pb3x4ODAxVXkIkEHRwpAUYQMygDegQIARB8..i&imgrefurl=https%3A%2F%2Fwww.allrecipes.com%2Frecipe%2F244458%2Fbuttered-noodles%2F&docid=pmOzBL_NHlG1-M&w=1500&h=1125&q=pasta%20with%20butter&ved=2ahUKEwj66Pb3x4ODAxVXkIkEHRwpAUYQMygDegQIARB8">
 <h3>Pasta with butter and cheese</h3>
 <p>Learn to make the best and easiest pasta ever!</p>
 <h4>Ingredients</h4>
