--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <h1>Lasagna</h1>
-    <img href="https://www.google.com/imgres?imgurl=https%3A%2F%2Fassets.epicurious.com%2Fphotos%2F6508a14155b19af4200459c7%2F4%3A6%2Fw_1932%2Ch_2898%2Cc_limit%2FSausage-Cheese-Basil-Lasanga_RECIPE.jpg&tbnid=g4DRAPemDguqLM&vet=12ahUKEwizvM6FyYODAxW0g4kEHZPRCbkQMygBegQIARB3..i&imgrefurl=https%3A%2F%2Fwww.epicurious.com%2Frecipes%2Ffood%2Fviews%2Flasagna-recipe&docid=wd4oJTMOFszNOM&w=1932&h=2898&q=lasagna&ved=2ahUKEwizvM6FyYODAxW0g4kEHZPRCbkQMygBegQIARB3>
+    <img src="https://www.google.com/imgres?imgurl=https%3A%2F%2Fassets.epicurious.com%2Fphotos%2F6508a14155b19af4200459c7%2F4%3A6%2Fw_1932%2Ch_2898%2Cc_limit%2FSausage-Cheese-Basil-Lasanga_RECIPE.jpg&tbnid=g4DRAPemDguqLM&vet=12ahUKEwizvM6FyYODAxW0g4kEHZPRCbkQMygBegQIARB3..i&imgrefurl=https%3A%2F%2Fwww.epicurious.com%2Frecipes%2Ffood%2Fviews%2Flasagna-recipe&docid=wd4oJTMOFszNOM&w=1932&h=2898&q=lasagna&ved=2ahUKEwizvM6FyYODAxW0g4kEHZPRCbkQMygBegQIARB3>
     <h3>Delicious meat lasagna</h3>
 <p>Learn how to make the best meat lasagna you've ever had in less than an hour!</p>
 
@@ -20,6 +20,7 @@
     <li>Parmesean Cheese</li>
     <li>Italian Seasoning</li>
 </ul>
+<h4>Steps</h4>
 <ol>
     <li>Put sauce in your baking dish</li>
     <li>Lay noodles evenly along bottom of pan</li>
