Added an Image directory to store recipe images.

--- a/recipes/chicken-nuggets.html
+++ b/recipes/chicken-nuggets.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <h1>Chicken Nuggets</h1>
-<img src="https://www.google.com/imgres?imgurl=https%3A%2F%2Fwww.corriecooks.com%2Fwp-content%2Fuploads%2F2022%2F11%2Fdino-nuggets-featured.jpg&tbnid=lXQmtg3jUp3tvM&vet=12ahUKEwirjcqSyIODAxVyuYkEHRCLApsQMygDegUIARCBAQ..i&imgrefurl=https%3A%2F%2Fwww.corriecooks.com%2Fdino-nuggets-air-fryer%2F&docid=XgfqrU9JgTN70M&w=1500&h=1000&q=dino%20nuiggets&ved=2ahUKEwirjcqSyIODAxVyuYkEHRCLApsQMygDegUIARCBAQ">
+<img src="../image/chicken-nuggets.jpeg">
 <h3>Amazing chicken nuggets</h3>
 <p>Learn how to make the best chicken nuggets right out of the freezer!</p>
 <h4>Ingredients</h4>
