Adjusting code for image trying to link images to index.

--- a/recipes/chicken-nuggets.html
+++ b/recipes/chicken-nuggets.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <h1>Chicken Nuggets</h1>
-<img src="../image/chicken-nuggets.jpeg">
+<img src="./image/chicken-nuggets.jpeg">
 <h3>Amazing chicken nuggets</h3>
 <p>Learn how to make the best chicken nuggets right out of the freezer!</p>
 <h4>Ingredients</h4>
