--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <h1>Lasagna</h1>
-<img src="../image/lasagna.jpeg>
+<img src="./image/lasagna.jpeg>
     <h3>Delicious meat lasagna</h3>
 <p>Learn how to make the best meat lasagna you've ever had in less than an hour!</p>
 
