Closed UL element in index, and added "alt" tag to image in chicken-nugget to see if this fixes image issues.

--- a/recipes/chicken-nuggets.html
+++ b/recipes/chicken-nuggets.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <h1>Chicken Nuggets</h1>
-<img src="./image/chicken-nuggets.pdf">
+<img src="./image/chicken-nuggets.pdf" alt="Picture of dino chicken nuggets">
 <h3>Amazing chicken nuggets</h3>
 <p>Learn how to make the best chicken nuggets right out of the freezer!</p>
 <h4>Ingredients</h4>
