Reverted back to just adding the boilderplate to re-work image issues.

--- a/recipes/chicken-nuggets.html
+++ b/recipes/chicken-nuggets.html
@@ -7,8 +7,9 @@
 </head>
 <body>
 <h1>Chicken Nuggets</h1>
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTOcjP0DfCSDh7kXZtBnThkF6UyI1I3m8K1Jw&usqp=CAU" alt="chicken nuggets">
 <h3>Amazing chicken nuggets</h3>
-    <p>Learn how to make the best chicken nuggets right out of the freezer!</p>
+<p>Learn how to make the best chicken nuggets right out of the freezer!</p>
 <h4>Ingredients</h4>
 <ul>
     <li>
@@ -22,6 +23,7 @@
     <li>Lay out nuggets in air fryer in a single layer</li>
     <li>Cook for 10 minutes or until desired crispiness</li>
     <li>Take nuggets out of the air fryer and enjoy!</li>
+</ol>
 </ol>
 </body>
 </html>
