Realized error was not in code, but the way i was viewing project. Re adjusted the chicken-nuggets back to updated correct format.

--- a/recipes/chicken-nuggets.html
+++ b/recipes/chicken-nuggets.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <h1>Chicken Nuggets</h1>
-<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTOcjP0DfCSDh7kXZtBnThkF6UyI1I3m8K1Jw&usqp=CAU" alt="chicken nuggets">
+<img src="..image/chicken-nuggets.jpg" alt="Picture of chicken nuggets">
 <h3>Amazing chicken nuggets</h3>
 <p>Learn how to make the best chicken nuggets right out of the freezer!</p>
 <h4>Ingredients</h4>
