Fixed remaining issue with image showing up on project, and adjusted sizing.

--- a/recipes/chicken-nuggets.html
+++ b/recipes/chicken-nuggets.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <h1>Chicken Nuggets</h1>
-<img src="..image/chicken-nuggets.jpg" alt="Picture of chicken nuggets">
+<img src="..image/chicken-nuggets.jpg" alt="Picture of chicken nuggets" width="500px">
 <h3>Amazing chicken nuggets</h3>
 <p>Learn how to make the best chicken nuggets right out of the freezer!</p>
 <h4>Ingredients</h4>
