--- a/recipes/pasta-with-butter.html
+++ b/recipes/pasta-with-butter.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <h1>Pasta with Butter</h1>
-<img src="https://vscode.dev/github/sarahaversa/odin-recipes/blob/main/images/pasta-with-butter.jpeg" alt="pasta and butter picture">
+<img src="..image/pasta=with-butter.jpg" alt="Picture of pasta with butter" width="500px">
 <h3>Pasta with butter and cheese</h3>
     <p>Learn to make the best and easiest pasta ever!</p>
 <h4>Ingredients</h4>
