--- a/recipes/chicken-nuggets.html
+++ b/recipes/chicken-nuggets.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Chicken Nuggets</title>
 </head>
 <body>
 <h1>Chicken Nuggets</h1>
-<img src="..image/chicken-nuggets.jpg" alt="Picture of chicken nuggets">
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTOcjP0DfCSDh7kXZtBnThkF6UyI1I3m8K1Jw&usqp=CAU" alt="Picture of regular chicken nuggets">
 <h3>Amazing chicken nuggets</h3>
 <p>Learn how to make the best chicken nuggets right out of the freezer!</p>
 <h4>Ingredients</h4>
