Trying a different version of link for images. Pasta with butter is using image address. Lasagna is using link address.

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Lasagna</title>
 </head>
 <body>
 <h1>Lasagna</h1>
-<img src="..image/lasagna.jpg" alt="Picture of lasagna">
+<img src="https://www.google.com/imgres?imgurl=https%3A%2F%2Fstatic01.nyt.com%2Fimages%2F2023%2F08%2F31%2Fmultimedia%2FRS-Lasagna-hkjl%2FRS-Lasagna-hkjl-superJumbo.jpg&tbnid=wXizrRbJZBABDM&vet=12ahUKEwj01o2F6YODAxWwpokEHcYECsMQMygAegQIARB0..i&imgrefurl=https%3A%2F%2Fcooking.nytimes.com%2Frecipes%2F9530-lasagna&docid=ImZQqw8i_duBNM&w=2048&h=1366&q=lasagna&ved=2ahUKEwj01o2F6YODAxWwpokEHcYECsMQMygAegQIARB0" alt="Picture of lasagna">
 <h3>Delicious meat lasagna</h3>
     <p>Learn how to make the best meat lasagna you've ever had in less than an hour!</p>
 <h4>Ingredients</h4>
