--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Recipes</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>Odin Recipes</h1>
     <ul>
-   <li><a href="recipes/lasagna.html">Lasagna</a></li>
+    <li><a href="recipes/lasagna.html">Lasagna</a></li>
     <li><a href="recipes/pasta-with-butter.html">Pasta with Butter</a></li>
     <li><a href="recipes/chicken-nuggets.html">Chicken Nuggets</a></li>
     </ul>
