--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <body>
     <h1>Odin Recipes</h1>
     <p>Here are some of the best easiest recipes you can make!</p>
-    <p>Click on the picture of what looks good to be sent to the recipes!</p>
+    
     <ul>
-    <li><a href="recipes/lasagna.html"></a>Lasagna</a></li>
+    <li><a href="recipes/lasagna.html">Lasagna</a></li>
     <li><a href="recipes/pasta-with-butter.html">Pasta with Butter</a></li>
-    <li><a href="recipes/chicken-nuggets.html">Chicken Nuggets</a></li>git po
+    <li><a href="recipes/chicken-nuggets.html">Chicken Nuggets</a></li>
     </ul>
 </body>
 </html>
