--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,8 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lasagna</title>
+    <title>Lasagna</title>s
     <link rel="stylesheet" href="styles.css">
+    <style>
+        h1{
+            color: red;
+        }
+        h3{
+            color:rgba(236, 78, 236, 0.85);
+        }
+    </style>
 </head>
 <body>
 <h1>Lasagna</h1>
