--- a/recipes/pasta-with-butter.html
+++ b/recipes/pasta-with-butter.html
@@ -5,6 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Buttered Pasta</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        h1 {
+            color: rgba(255, 255, 0, 0.54);
+        }
+        h4{
+            color:pink;
+        }
+    </style>
 </head>
 <body>
 <h1>Pasta with Butter</h1>
