Fixed margin error. Fixed type on Lasagna.

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lasagna</title>s
+    <title>Lasagna</title>
     <link rel="stylesheet" href="styles.css">
     <style>
         h1{
             color: red;
         }
-        h3{
+        h3, h4{
             color:rgba(236, 78, 236, 0.85);
         }
     </style>
