--- a/recipes/pasta-with-butter.html
+++ b/recipes/pasta-with-butter.html
@@ -9,6 +9,9 @@
         h1 {
             color: rgba(255, 255, 0, 0.54);
         }
+        h3{
+            color: rgba(199, 47, 199, 0.48);
+        }
         h4{
             color:pink;
         }
